--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@
         <i class="bi bi-cash-coin"></i> Cálculo INSS
       </a>
       <a href="https://domillan.github.io/zap_api/" class="btn btn-success btn-lg menu-btn">
-        <i class="bi bi-whatsapp"></i> Acesso WhatsApp
+        <i class="bi bi-whatsapp"></i> WhatsApp com número
+      </a>
+      <a href="https://domillan.github.io/notasufrgs/" class="btn btn-danger btn-lg menu-btn">
+        <i class="bi bi-backpack"></i> Vestibular UFRGS
       </a>
       <a href="https://github.com/domillan" class="btn btn-dark btn-lg menu-btn">
         <i class="bi bi-github"></i> GitHub
