--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
   <div class="container text-center">
     <div class="d-flex justify-content-between align-items-center">
       <h1 class="title">Aplicações</h1>
-      <p class="subtitle">Feito por Daniel Millan</p>
+      <p class="subtitle">Feito por <a href="http://lattes.cnpq.br/6702944102751831">Daniel Millan</a></p>
     </div>
 
     <div class="menu d-flex flex-column align-items-center">
       <a href="https://domillan.github.io/dosimetria/" class="btn btn-primary btn-lg menu-btn">
         <i class="bi bi-calculator"></i> Dosimetria de Pena
       </a>
-      <a href="https://domillan.github.io/descontosCartao/" class="btn btn-light btn-lg menu-btn">
+      <a href="https://domillan.github.io/descontosConsignado/" class="btn btn-light btn-lg menu-btn">
         <i class="bi bi-cash-coin"></i> Cálculo INSS
       </a>
       <a href="https://domillan.github.io/zap_api/" class="btn btn-success btn-lg menu-btn">
